--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
 
         <h2>Astronauts Aboard the ISS</h2>
         <div id='astronaut-list'>
-            <ul></ul>
+            <ul>
+                <li>Christina Koch</li>
+                <li>Alexander Skvortsov</li>
+                <li>Luca Parmitano</li>
+                <li>Andrew Morgan</li>
+                <li>Oleg Skripochka</li>
+                <li>Jessica Meir</li>
+            </ul>
         </div>
         <script
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9VN-uLRhGq7I0Ke_oQgnmZy3pLkWp2Ns&callback=initMap"
