Listed astronauts because of mixed-content error

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>ISS Tracker</title>
 </head>
@@ -24,7 +23,14 @@
 
         <h2>Astronauts Aboard the ISS</h2>
         <div id='astronaut-list'>
-            <ul></ul>
+            <ul>
+                <li>Christina Koch</li>
+                <li>Alexander Skvortsov</li>
+                <li>Luca Parmitano</li>
+                <li>Andrew Morgan</li>
+                <li>Oleg Skripochka</li>
+                <li>Jessica Meir</li>
+            </ul>
         </div>
         <script
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9VN-uLRhGq7I0Ke_oQgnmZy3pLkWp2Ns&callback=initMap"
